[package]
name = "n64rom_analyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.0.0"
enum-map = "*"
num_enum = "0.5.7"
num-traits = "*"
parse_int = "0.6.0"
rabbitizer = "1.5.5"
argh = "0.1.9"
rayon = "1.6.1"
strum = "0.24"
strum_macros = "0.24"

itertools = "0.10.5"
